improve the css(border, space of review cards)

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                 </ul>
             </nav>
             <div style="padding: 3rem">
-                <h1 style="font-size: 2rem; text-align: center;">Frontend Developer</h1>
+                <h1>Frontend Developer</h1>
                 <p style="text-align: center">html only with proper layout, no styling</p>
             </div>
         </div>
 
         <div class="container border">
-            <div class="section border-small">
-                <h2 >Projects</h2>
-                <p>Calculator</p>
-                <p>To-Do List</p>
-                <p>Quiz App</p>
-                <p>Countdown Timer</p>
-            </div>
+            <ul class="section-li">
+                <li>Projects</li>
+                <li >Calculator</li>
+                <li>To-Do List</li>
+                <li>Quiz App</li>
+                <li>Countdown Timer</li>
+            </ul>
             <div class="section border-small">
                 <h2>Work Experience</h2>
                 <p> roadmap.sh</p>
@@ -52,21 +52,21 @@
             <h2 style="padding-top: 1rem; padding-left: 1.25rem">Review from my teachers</h2>
             <div class="container">
                 <div class="section border-circle">    
-                    <p>"Hoang Quoc Duong is a dedicated and talented frontend developer. His 
+                    <p class="review-card">"Hoang Quoc Duong is a dedicated and talented frontend developer. His 
                         attention to detail and commitment to quality work is commendable."
                     </p>
                     <p>- Mr. John Smith, Senior Developer at Tech Solutions</p>
                 </div>
 
                 <div class="section border-circle">    
-                    <p>"Hoang Quoc Duong is a dedicated and talented frontend developer. His 
+                    <p class="review-card">"Hoang Quoc Duong is a dedicated and talented frontend developer. His 
                         attention to detail and commitment to quality work is commendable."
                     </p>
                     <p>- Mr. John Smith, Senior Developer at Tech Solutions</p>
                 </div>
 
                 <div class="section border-circle">    
-                    <p>"Hoang Quoc Duong is a dedicated and talented frontend developer. His 
+                    <p class="review-card">"Hoang Quoc Duong is a dedicated and talented frontend developer. His 
                         attention to detail and commitment to quality work is commendable."
                     </p>
                     <p>- Mr. John Smith, Senior Developer at Tech Solutions</p>
